--- a/1_homework/index.html
+++ b/1_homework/index.html
@@ -1,34 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-
+  </head>
+  <body>
     <script>
-        // 1) Дан массив const arr = [1, 5, 7, 9] с помощью Math.min и spread оператора, найти минимальное число в массиве, решение задание должно состоять из одной строки
-        // 2) Напишите функцию createCounter, которая создает счетчик и возвращает объект с двумя методами: increment и decrement. Метод increment должен увеличивать значение счетчика на 1, а метод decrement должен уменьшать значение счетчика на 1. Значение счетчика должно быть доступно только через методы объекта, а не напрямую.
-        // 3) Напишите рекурсивную функцию findElementByClass, которая принимает корневой элемент дерева DOM и название класса в качестве аргументов и возвращает первый найденный элемент с указанным классом в этом дереве.
-        // Пример
-        // const rootElement = document.getElementById('root');
-        // const targetElement = findElementByClass(rootElement, 'my-class');
-        // console.log(targetElement);
+      // 1) Дан массив const arr = [1, 5, 7, 9] с помощью Math.min и spread оператора, найти минимальное число в массиве, решение задание должно состоять из одной строки
+      const arr = [1, 5, 7, 9];
+      console.log(Math.min(...arr));
 
-        // 1)
-        const arr = [1, 5, 7, 9];
-        console.log(Math.min(...arr));
+      // 2) Напишите функцию createCounter, которая создает счетчик и возвращает объект с двумя методами: increment и decrement. Метод increment должен увеличивать значение счетчика на 1, а метод decrement должен уменьшать значение счетчика на 1. Значение счетчика должно быть доступно только через методы объекта, а не напрямую.
+      function createCounter() {
+        let counter = 0;
 
-        // 2)
-        function createCounter (arguments) {
-            // body
+        return {
+          increment: function () {
+            counter++;
+          },
+          decrement: function () {
+            counter--;
+          },
+          getCounter: function () {
+            return counter;
+          },
+        };
+      }
+
+      let counter = createCounter();
+      counter.increment();
+      counter.increment();
+      counter.increment();
+      counter.decrement();
+      console.log(counter.getCounter());
+      console.log(counter);
+
+      // 3) Напишите рекурсивную функцию findElementByClass, которая принимает корневой элемент дерева DOM и название класса в качестве аргументов и возвращает первый найденный элемент с указанным классом в этом дереве.
+      // Пример
+      // const rootElement = document.getElementById('root');
+      // const targetElement = findElementByClass(rootElement, 'my-class');
+      // console.log(targetElement);
+
+      function findElementByClass(root, targetClass) {
+        if (root.classList && root.classList.contains(targetClass)) {
+          return root;
         }
 
+        for (let i = 0; i < root.children.length; i++) {
+          const child = root.children[i];
+          const foundElement = findElementByClass(child, targetClass);
 
+          if (foundElement) {
+            return foundElement;
+          }
+        }
 
+        return null;
+      }
     </script>
-
-</body>
+  </body>
 </html>
