--- a/1_homework/index.html
+++ b/1_homework/index.html
@@ -58,6 +58,24 @@
 
         return null;
       }
+
+      const rootElem = document.body;
+      let elemFound;
+
+      function findElementByClass(root, myClass) {
+        //  console.log(root)
+        if (root.classList.contains(myClass)) return root;
+        else {
+          for (let i = 0; i < root.children.length; i++) {
+            if (root.children[i].classList.contains(myClass))
+              return root.children[i];
+            elemFound = findElementByClass(root.children[i], myClass);
+          }
+        }
+        return elemFound ? elemFound : "not found";
+      }
+
+      console.log(findElementByClass(rootElem, "my-class"));
     </script>
   </body>
 </html>
