Added materials for the third lesson

--- a/3_homework/task2.html
+++ b/3_homework/task2.html
@@ -19,9 +19,8 @@
       class Order {
         constructor(orderNumber) {
           this.orderNumber = orderNumber;
+          this.products = [];
         }
-
-        products = []
 
         addProduct(product) {
             this.products.push(product);
